p2/confs/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ${name}
  labels:
    app.kubernetes.io/name: ${name}
    app.kubernetes.io/part-of: ${name}
    app.kubernetes.io/managed-by: kubectl
spec:
  ports:
  - port: ${port}
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: ${name}
  sessionAffinity: None
  type: ClusterIP
